# slot-interview-task

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs  service.rs
src/service/: collector.rs  reader.rs
